[B]Retrospect v4.1.7~beta23 - Changelog - 2018-10-07[/B]

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Fixed: VRT.nu live streams (Fixes #1028)