@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="net.rieter.xot.channel.regionalnl"
-       version="4.1.7.2"
+       version="4.1.7.3"
        name="Retrospect Nederlandse Regionale zenders"
        provider-name="Bas Rieter">
 
